--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
     "axios": "^0.24.0",
     "expo": "~44.0.0",
     "expo-auth-session": "~3.5.0",
